<resources>
    <string name="app_name">SpeechApp</string>
    <string name="session_activity">Session Activity</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start Session</string>
    <string name="view_button">View Records</string>
    <string name="report_button">Generte a Report</string>
    <string name="option_button">Options</string>
    <string name="back">Back</string>
    <string name="add_client">Add Client</string>
    <string name="find_client">Find Client</string>
    <string name="delete_client">Delete Client</string>
    <string name="client_id">Client ID</string>
    <string name="enter_id">Enter Client\'s ID</string>
    <string name="letter">Letter: </string>
    <string name="position">Position: </string>
</resources>
